--- a/index.html
+++ b/index.html
@@ -22,82 +22,82 @@
     <div class="flex justify-center align-middle">
         <div class="cells-board-wrapper">
             <div class="cells-board">
-                <button id="cellButton_1" type="button" class="cell">
+                <button id="cellButton" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_5450.svg">
                 </button>
-                <button id="cellButton_2" type="button" class="cell">
+                <button id="cellButton" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_11641.svg">
                 </button>
-                <button id="cellButton_3" type="button" class="cell">
+                <button id="cellButton" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_18337.svg">
                 </button>
-                <button id="cellButton_4" type="button" class="cell">
+                <button id="cellButton" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_23230.svg">
                 </button>
-                <button id="cellButton_5" type="button" class="cell">
+                <button id="cellButton" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_28741.svg">
                 </button>
-                <button id="cellButton_6" type="button" class="cell">
+                <button id="cellButton" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_33458.svg">
                 </button>
-                <button id="cellButton_7" type="button" class="cell">
+                <button id="cellButton" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_38799.svg">
                 </button>
-                <button id="cellButton_8" type="button" class="cell">
+                <button id="cellButton" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_43516.svg">
                 </button>
-                <button id="cellButton_9" type="button" class="cell">
+                <button id="cellButton" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_49176.svg">
                 </button>
-                <button id="cellButton_10" type="button" class="cell">
+                <button id="cellButton" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_5450.svg">
                 </button>
-                <button id="cellButton_11" type="button" class="cell">
+                <button id="cellButton" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_11641.svg">
                 </button>
-                <button id="cellButton_12" type="button" class="cell">
+                <button id="cellButton" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_18337.svg">
                 </button>
-                <button id="cellButton_13" type="button" class="cell">
+                <button id="cellButton" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_23230.svg">
                 </button>
-                <button id="cellButton_14" type="button" class="cell">
+                <button id="cellButton" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_28741.svg">
                 </button>
-                <button id="cellButton_15" type="button" class="cell">
+                <button id="cellButton" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_33458.svg">
                 </button>
-                <button id="cellButton_16" type="button" class="cell">
+                <button id="cellButton" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_38799.svg">
                 </button>
-                <button id="cellButton_17" type="button" class="cell">
+                <button id="cellButton" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_43516.svg">
                 </button>
-                <button id="cellButton_18" type="button" class="cell">
+                <button id="cellButton" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_49176.svg">
                 </button>
-                <button id="cellButton_19" type="button" class="cell">
+                <button id="cellButton" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_5450.svg">
                 </button>
-                <button id="cellButton_20" type="button" class="cell">
+                <button id="cellButton" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_11641.svg">
                 </button>
-                <button id="cellButton_21" type="button" class="cell">
+                <button id="cellButton" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_18337.svg">
                 </button>
-                <button id="cellButton_22" type="button" class="cell">
+                <button id="cellButton" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_23230.svg">
                 </button>
-                <button id="cellButton_23" type="button" class="cell">
+                <button id="cellButton" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_28741.svg">
                 </button>
-                <button id="cellButton_24" type="button" class="cell">
+                <button id="cellButton" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_33458.svg">
                 </button>
-                <button id="cellButton_25" type="button" class="cell">
+                <button id="cellButton" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_38799.svg">
                 </button>
-            </div>
+                </div>
 
             <div class="select-traps__content">
                 <button class="select-traps__prev-arrow-btn disabled:opacity-50" type="button" id="prev_preset_btn">
