--- a/index.html
+++ b/index.html
@@ -22,79 +22,79 @@
     <div class="flex justify-center align-middle">
         <div class="cells-board-wrapper">
             <div class="cells-board">
-                <button id="cellButton" type="button" class="cell">
+                <button id="cellButton_1" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_5450.svg">
                 </button>
-                <button id="cellButton" type="button" class="cell">
+                <button id="cellButton_2" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_11641.svg">
                 </button>
-                <button id="cellButton" type="button" class="cell">
+                <button id="cellButton_3" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_18337.svg">
                 </button>
-                <button id="cellButton" type="button" class="cell">
+                <button id="cellButton_4" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_24493.svg">
                 </button>
-                <button id="cellButton" type="button" class="cell">
+                <button id="cellButton_5" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_31201.svg">
                 </button>
-                <button id="cellButton" type="button" class="cell">
+                <button id="cellButton_6" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_37357.svg">
                 </button>
-                <button id="cellButton" type="button" class="cell">
+                <button id="cellButton_7" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_44065.svg">
                 </button>
-                <button id="cellButton" type="button" class="cell">
+                <button id="cellButton_8" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_50221.svg">
                 </button>
-                <button id="cellButton" type="button" class="cell">
+                <button id="cellButton_9" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_56929.svg">
                 </button>
-                <button id="cellButton" type="button" class="cell">
+                <button id="cellButton_10" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_63085.svg">
                 </button>
-                <button id="cellButton" type="button" class="cell">
+                <button id="cellButton_11" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_69793.svg">
                 </button>
-                <button id="cellButton" type="button" class="cell">
+                <button id="cellButton_12" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_75949.svg">
                 </button>
-                <button id="cellButton" type="button" class="cell">
+                <button id="cellButton_13" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_82645.svg">
                 </button>
-                <button id="cellButton" type="button" class="cell">
+                <button id="cellButton_14" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_89353.svg">
                 </button>
-                <button id="cellButton" type="button" class="cell">
+                <button id="cellButton_15" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_95509.svg">
                 </button>
-                <button id="cellButton" type="button" class="cell">
+                <button id="cellButton_16" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_102217.svg">
                 </button>
-                <button id="cellButton" type="button" class="cell">
+                <button id="cellButton_17" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_108373.svg">
                 </button>
-                <button id="cellButton" type="button" class="cell">
+                <button id="cellButton_18" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_115081.svg">
                 </button>
-                <button id="cellButton" type="button" class="cell">
+                <button id="cellButton_19" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_121237.svg">
                 </button>
-                <button id="cellButton" type="button" class="cell">
+                <button id="cellButton_20" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_127381.svg">
                 </button>
-                <button id="cellButton" type="button" class="cell">
+                <button id="cellButton_21" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_134077.svg">
                 </button>
-                <button id="cellButton" type="button" class="cell">
+                <button id="cellButton_22" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_140221.svg">
                 </button>
-                <button id="cellButton" type="button" class="cell">
+                <button id="cellButton_23" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_146917.svg">
                 </button>
-                <button id="cellButton" type="button" class="cell">
+                <button id="cellButton_24" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_153061.svg">
                 </button>
-                <button id="cellButton" type="button" class="cell">
+                <button id="cellButton_25" type="button" class="cell">
                     <img width="56" height="56" src="output_svgs/image_159757.svg">
                 </button>
                 <div class="cells-board-mask">
@@ -129,5 +129,6 @@
             </button>
         </div>
     </div>
-    <span id="botName" style="display: none;"></span> </body>
+    <span id="botName" style="display: none;"></span>
+</body>
 </html>
