--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="mines.css">
     <script src="script.js" defer></script>
+    <style>
+        /* Дополнительные стили для центрирования счетчика */
+        .plays-counter-container {
+            text-align: center; /* Центрируем содержимое */
+            margin-top: 10px; /* Отступ сверху */
+            margin-bottom: 10px; /* Отступ снизу */
+        }
+    </style>
 </head>
 <body>
     <div id="resetPopup" class="popup hidden">
@@ -115,13 +123,18 @@
             <div class="select-traps__content">
                 <span class="select-traps__traps_amount" id="trapsAmount">1</span>
                 <span class="select-traps__title" data-i18n="traps">traps</span>
-                <span id="playsCounter" style="margin-left: 10px; color: white;"></span> </div>
+            </div>
             <button class="select-traps__next-arrow-btn disabled:opacity-50" type="button" id="next_preset_btn">
                 <svg class="select-traps__arrow-icon" viewBox="0 0 13 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M2.92616 20.0002L10.7906 12.082L12.8584 10.0001L10.7906 7.91821L2.92616 0L0.858398 2.0819L8.72287 10.0001L0.858398 17.9183L2.92616 20.0002Z"></path>
                 </svg>
             </button>
         </div>
+        
+        <div class="plays-counter-container">
+            <span id="playsCounter" style="color: white; font-size: 1.1em; font-weight: bold;"></span> 
+        </div>
+
         <div class="flex flex-wrap flex-row mobile:flex-col mobile:gap-y-3"></div>
         <div class="basis-1/3 pl-2 mobile:pl-0 mobile:basis-auto mobile:h-[3.25rem]">
             <button id="playButton" type="button" class="app-button big games-blue-bg text-white cursor-pointer block h-full w-full">
@@ -129,6 +142,5 @@
             </button>
         </div>
     </div>
-    <span id="botName" style="display: none;"></span>
-</body>
+    </body>
 </html>
